# emuNEX-launcher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  install.rs  main.rs  update.rs
