[package]
name = "emunex-launcher"
version = "0.1.0"
edition = "2024"
description = "Process supervisor and updater for emunex-server"
repository = "https://github.com/chloecinders/emuNEX-launcher"
authors = ["chloecinders"]

[[bin]]
name = "emunex-launcher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
toml = "1"
